--- a/front/package.json
+++ b/front/package.json
@@ -9,6 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.1",
     "@biconomy/account": "^3.0.0-alpha.0",
     "@biconomy/bundler": "^3.0.0-alpha.0",
     "@biconomy/common": "^3.0.0-alpha.0",
@@ -21,6 +25,7 @@
     "ethers": "5.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.2",
     "react-toastify": "^9.1.3",
     "rollup-plugin-polyfill-node": "^0.12.0",
     "stream-browserify": "^3.0.0"
