--- a/front/package.json
+++ b/front/package.json
@@ -4,24 +4,26 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d build", 
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.0",
-    "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.13.1",
     "@biconomy/account": "^3.0.0-alpha.0",
     "@biconomy/bundler": "^3.0.0-alpha.0",
     "@biconomy/common": "^3.0.0-alpha.0",
     "@biconomy/core-types": "^3.0.0-alpha.0",
+    "@biconomy/node-client": "^3.0.0-alpha.0",
     "@biconomy/paymaster": "^3.0.0-alpha.0",
     "@biconomy/web3-auth": "^3.0.0-alpha.0",
-    "@biconomy/node-client": "^3.0.0-alpha.0",
     "@emotion/css": "^11.11.2",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.1",
     "ethers": "5.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -34,6 +36,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
+    "gh-pages": "^6.0.0",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
   }
