--- a/smartContract/package.json
+++ b/smartContract/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "a smart contract wallet which offers new feature for safetransfer",
   "main": "index.js",
+  "homepage": "http://meisamtaher.github.io/Surepay",
   "scripts": {
     "clean": "npx hardhat clean",
     "build": "npm run clean && npx hardhat compile",
