--- a/front/package.json
+++ b/front/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "http://meisamtaher.github.io/Surepay",
   "scripts": {
     "predeploy" : "npm run build",
     "deploy" : "gh-pages -d dist", 
